Fix for select arrows on Safari iOS

--- a/src/theme.css
+++ b/src/theme.css
@@ -237,7 +237,9 @@ input[type=checkbox]:checked + *:before {
 	padding: 0 4px;
 	margin: 0 4px;
 	right: 0;
-	top: 20px;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
 	transform: translateY(-50%);
 	font-family: "icons";
 	-webkit-font-smoothing: antialiased;
